#
# Copyright (C) 2018 Steve Schnepp <steve.schnepp@pwkf.org> - All rights reserved.
#
# This copyrighted material is made available to anyone wishing to use,
# modify, copy, or redistribute it subject to the terms and conditions
# of the GNU General Public License v.2 or v.3.
#

include $(top_srcdir)/common.am

bin_PROGRAMS = munin-async-c
munin_async_c_SOURCES = async.c
